Bug 148389 - The bracket of "display of bookmarks formatting" doesn't position itself properly at undo
Summary: The bracket of "display of bookmarks formatting" doesn't position itself pro...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.4
Keywords:
Depends on:
Blocks: Formatting-Mark Undo-Redo Bookmarks
  Show dependency treegraph
 
Reported: 2022-04-05 09:04 UTC by Telesto
Modified: 2024-07-23 02:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file (41.20 KB, application/vnd.oasis.opendocument.text)
2022-04-05 09:04 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-05 09:04:03 UTC
Description:
The bracket of "display of bookmarks formatting"  doesn't position itself properly at undo

Steps to Reproduce:
1. Open the attached file
2. Place the cursor at the end of Dedication
3. Press Backspace until the last D (so the starting D remains)
4. Press CTRL+Z

(tools-> options>Writer ->Formatting Aids > Check Bookmarks) if those gray brackets not being visible

Actual Results:
Bracket position not restored

Expected Results:
Should the case


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cf4d5ed026c8799a70432a832a8a707c2e316216
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL Jumbo
Comment 1 Telesto 2022-04-05 09:04:16 UTC
Created attachment 179318 [details]
Example file
Comment 2 Dieter 2022-04-19 08:14:05 UTC
I confirm it with

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d34d1db55978bdcff082af1e0f75b18fa6fc94f4
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 3 Commit Notification 2023-11-24 09:24:40 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/57974af130e7421da6b07589d4a63a754b757ad6

tdf#148389 sw: fix Delete Undo/Redo of bookmark positions

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2023-11-24 09:26:45 UTC
fixed on master
Comment 5 Sven 2023-11-27 21:01:53 UTC
Tested, works with
Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 86c682273d907c77404637c89e584047de1c1099
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 6 Dieter 2023-11-28 03:20:58 UTC
(In reply to Sven from comment #5)
> Tested, works with
> Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
> Build ID: 86c682273d907c77404637c89e584047de1c1099
> CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL:
> win
> Locale: de-DE (de_DE); UI: de-DE
> Calc: threaded

=> VERIFIED FIXED
Comment 7 Commit Notification 2023-11-30 12:10:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/d272ab078b401bf4d70919680f2aa18ddbb15c6a

tdf#148389 sw: fix Delete Undo/Redo of bookmark positions

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.